Example Project Finished

--- a/HiltExample/app/src/main/AndroidManifest.xml
+++ b/HiltExample/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.isilsubasi.basichiltexample">
 
     <application
+        android:name=".MyHiltApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
