--- a/MVVMRetrofitHiltExample/app/build.gradle
+++ b/MVVMRetrofitHiltExample/app/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.isilsubasi.retrofithiltexample"
@@ -58,5 +58,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     //Gson
     implementation 'com.google.code.gson:gson:2.9.1'
+    //OkHttp Interceptor
+    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.1"
+    //Image loading
+    implementation 'io.coil-kt:coil:1.4.0'
 
 }
